SERVER-49159: Return NotPrimaryOrSecondary if currentTime is uninitialized in waitForReadConcernImpl